# Robotics-project2

./: README.md
code/: CMakeLists.txt  description.txt  package.xml
code/launch/: amcl_test.launch  cam_gmapping.launch  ekf_localization.launch  opti_gmapping.launch
code/launch/include/: amcl.launch  gmapping.launch  imu_filter.launch
code/maps/: map.pgm
code/rviz/: gmapping.rviz  robot_navigation.rviz
maps history/maps from gmapping conf2d/: gmapping.launch  map_cam.pgm  map_opti.pgm
maps history/maps from gmapping custom/: gmapping.launch  map_cam.pgm  map_cam.yaml  map_opti.pgm
maps history/maps from gmapping custom bigger max dist/: gmapping.launch  map.pgm  map.yaml
maps history/maps from gmapping custom bigger max dist/occ_thresh 0.1/: map.pgm
maps history/maps from gmapping custom bigger max dist/occ_thresh 0.15/: map.pgm
maps history/maps from gmapping custom bigger max dist/occ_thresh 0.20/: map.yaml
maps history/maps from gmapping custom bigger max dist/occ_thresh 0.20/maps with imu/: map with mavros imu.pgm  map with mavros imu.yaml  map_with_imu.pgm  map_with_imu.yaml
