<?xml version="1.0"?>
<package>
  <name>project2</name>
  <version>0.0.0</version>
  <description>Launch files for gmapping</description>
  <author email="degastkai@gmail.com">Kai de Gast</author>
  <maintainer email="degastkai@gmail.com">Kai de Gast</maintainer>
<license>KDG</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>amcl</run_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>map_server</run_depend>

  <export>

  </export>
</package>
